# TickerGrade-V1

./: .gitignore  .replit  pyproject.toml  replit.md  start.sh
attached_assets/: Pasted-1-Visual-Bug-in-Event-Risk-Card-Image-10-The-Issue-In-t_1767294629872.txt  Pasted-Build-a-Swing-Trading-Decision-Engine-web-app-optimized_1766954790612.txt  Pasted-Build-a-comprehensive-S-P-500-Stock-Scorer-application-_1766793890480.txt  Pasted-Create-a-new-About-TickerGrade-page-and-add-it-to-the-N_1767568787287.txt  Pasted-MAJOR-UPDATE-Convert-to-Multi-Page-App-with-Glass-Box-D_1767305392705.txt  Pasted-MASTER-UPDATE-Realign-App-for-30-60-Day-Inter-Quarter-T_1767297900406.txt  Pasted-Major-Update-Implement-Smart-Money-Fear-Gauge-and-Updat_1767125403914.txt  Pasted-Subject-Upgrade-Macro-Pillar-Scoring-Logic-Credit-Sprea_1768717747490.txt  Pasted-Task-Implement-MarketData-Service-for-Real-Time-Pricing_1767837718858.txt  Pasted-Update-the-About-or-Methodology-page-content-Replace-th_1766968655149.txt
backend/: app.py  data_services.py  models.py  replit_auth.py  scoring_engine.py
backend/services/: finnhub_service.py  marketdata_service.py  scanner.py
backend/templates/: 403.html
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/components/: ActionCard.tsx  CookieBanner.tsx  Footer.tsx  MobileAppModal.tsx  Navbar.tsx  NetLiquidityChart.tsx  PillarCard.tsx  PriceChart.tsx  RecentScansCard.tsx  ScoreGauge.tsx  ShareButton.tsx  StrategySettings.tsx  WelcomeModal.tsx
(+12 files in other folders)
