[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.2.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "fredapi>=0.5.2",
    "gunicorn>=23.0.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "textblob>=0.19.0",
    "yfinance>=1.0",
]
